﻿以下功能最近几个月别想用了：
1、出兵

-= Stran 1.2.5 [GoldenFox] 发布 =-
- 修正了运输探测的问题 (感谢firefox)
- 修正了派对和研发升级探测的问题 (感谢chihsun)

-= Stran 1.2.4 [GoldenCOMX] 发布 =-
- 添加了单个村庄的大致资源比例情况显示。1表示10%到19.9%范围，7表示70%到79.9%范围，E=空(只有粮食会空)，F=满
- 添加了COMX最新版本的支持
- 修复BUG1649

-= Stran 1.2.3 [GoldenPhoenix] 发布 =-
- 添加了新增田(7田等)的数据
- 修正了建造队列不按顺序造建筑的问题
- 修正了造兵显示不正确的问题
- 修正了不能取消拆除的问题
- 取消建造现在应该能用了 (1.2.2里加入的，漏写了)

-= Stran 1.2.2 [GoldenPhoenix] 发布 =-
- 可在游戏中设置新的主村
- 修正了升级兵种探测的问题 (我想杀人……)
- 运输标记于状态栏：NC不运送粮食，FG无视爆仓检查

-= Stran 1.2.1 [GoldenPhoenix] 发布 =-
- 修正了研发兵种探测的问题
- 修正了研发等级检测的问题
- 修正了饮马槽酿酒厂的数据

-= Stran 1.2.0 [GoldenPhoenix] 发布 =-
- 基于T3.5版本
- 修正了升级兵种的显示问题

-= Stran 1.1-2(53) 发布 =-
- 修正了因粮食产量少于人口而造成的崩溃问题。
- 运输功能现在可以按照当前村的爆仓时间来平衡运输了。(需要大量测试)
- 添加了造兵功能。需要先刷新研发情况数据。(仍然不稳定，有崩溃危险，需要测试)

-= Stran 1.1-1(50) 光棍节特别版 发布 =-
- 取消BinaryFormatter串行化，改用Json文本方式实现串行化保存数据。
- - 更易读的数据格式，可直接编辑修改其中的内容。(请勿滥用)
- - 可自动存储和恢复包括村庄建筑、研发等级和市场运输情况在内的大部分村庄数据。
- - 程序崩溃后恢复时可近乎无损地继续崩溃前的状态。Cookie也将恢复给WebClient以避免无谓的重新登录。
- 为WebClient加入User-Agent，以Maxthon用户代理模式运行。
- 新的队列对象模型，通过实现IQueue接口以提供更好的扩展性和兼容性。
- 新的托盘图标以动态显示数据交换的情况，同时提供更好的隐蔽性。
- 加入允许金币的菜单项。启用后才可以添加平仓功能的任务。已经在任务队列中的不受影响。
- 现在可以查看每次会话所抓取的页面数和执行的任务数。
- 现在可以屏蔽抓取页面的详细日志了。可以在日志界面中点击关闭。
- 关闭了出错时的提示框。
* FIX1:
- 现在可以导入和导出队列了。格式与以前的不兼容。
- 多次运输队列现在可以正常地留在队列中了。
- 举办活动队列现在会最多重试 10 次了。每次的重试间隔随着重试次数的增多而延长，并且随机生成。
- 运输定时功能被改为通用定时功能，将为其它定时工作的任务提供定时设定支持。现在时间显示功能已经正常了，而不是原先的只显示 12 小时。
- 修正了运输队列无法被正确序列化为Json文本的问题。
* FIX2:
- 修正了一个类名匹配上的错误。
- 修正了开派对崩溃的错误。
- 修正了运输队列删除的一个条件错误。
* FIX3:
- 修正了若干队列添加时的错误。
- 修正了导入队列后建造项目不会添加到建筑列表的错误。
- 运输队列现在会最多重试 5 次了。(需要测试)
- 修正了建造队列调试信息的显示问题。
- 添加了新建建筑升级到顶级的功能。
- 现在可以取消资源运输限制了。
* FIX4:
- 修正了研发队列导致崩溃的错误。
- 修正了拆除队列倒计时显示不正常的问题。
- 删除新建建造队列的同时会删除建筑列表中等级为 0 的相应项目。

-= Stran 1.0-18(39) Fix2 发布 =-
[*]增加任务暂停、恢复功能。
[*]增加任务队列输入、输出功能。
[*]修正一些错误。

-= Stran 1.0-18(26)Beta1测试 =-
[*]增加自动平仓功能。
[*]使用模拟网页进行自动平仓单元测试。
[*]修正了无法解析COMX建筑页面的问题
[*]修正了“进行中的任务”弹出菜单后的异常错误。

-= 自动平仓使用说明 =-
[*]在“村庄建筑”或“市场运输”中可以选择自动平仓